@@ -35,6 +35,8 @@ void ConvertColorsToStorage(char*, int);
 char ConvertColorToStorage(char);
 void AdjustBounds(RGBinary*, int32_t*, int32_t*, int32_t*, int32_t*);
 int WillGenerateValidKey(RGIndex*, char*, int);
+int ValidateFileName(char*);
+void StringCopyAndReallocate(char**, const char*);
 
 #endif
 
