@@ -32,9 +32,9 @@ struct arguments
 
 /* Local functions */
 static int ValidateInputs(struct arguments*);
-int ValidateFileName(char*);
 void AssignDefaultValues(struct arguments*);
 void PrintProgramParameters(FILE*, struct arguments*);
+void FreeProgramParameters(struct arguments *args);
 void PrintGetOptHelp();
 void GetOptHelp();
 void PrintGetOptHelp();
